# teaching_bot

./: .env.example  .env_sample  .gitignore  README.md  UML.md  pyproject.toml
app/: config.py  logger.py  main.py
app/bot/: auth.py  main.py
app/core/: config.py
app/domain/: models.py  roles.py
app/repositories/: csv_repo.py  materials_repo.py
app/services/: assignments_service.py  audit_service.py  booking_service.py  feedback_service.py  grade_service.py  materials_service.py  roster_service.py  roster_ta_service.py  slot_service.py  storage_service.py  submission_service.py  ta_prefs_service.py  ta_requests_service.py  task_service.py  users_service.py  weeks_service.py
app/storage/: grades.py  instructor_map.py  pending_registrations.py  roster.py  roster_matching.py  user_links.py  users.py  yadisk.py
app/utils/: checksums.py  ids.py  logs.py  status.py  time.py
data/: users.csv
data/example/: assignments.csv  audit.csv  bookings.csv  feedback.csv  grades.csv  roster.csv  roster_ta.csv  slots.csv  submissions.csv  ta_prefs.csv  ta_requests.csv  tasks.csv  users.csv  weeks.csv
docs/: CHANGELOG.md  README.md
docs/L1/: L1_Business_Requirements_v0.8.md
docs/L2/: L2_Owner_v0.8.md  L2_Student_v0.8.md  L2_Teacher_v0.8.md
docs/L3/: L3_Owner_v0.8.md  L3_Student_v0.8.md  L3_Teacher_v0.8.md
docs/ux/: Front_Spec_Student.md  Front_Spec_Teacher.md  UX_Mapping_Student.md  (+1 more)
tests/: conftest.py  test_access.py  test_grades.py  test_grading_batch.py  test_grading_fsm.py  test_materials_service.py  test_registration_flow.py  test_roles.py  test_submit_and_pull.py  test_users.py
(+36 files in other folders)
