[tool.poetry]
name = "teaching-assistant-bot"
version = "0.1.0"
description = "Telegram учебный ассистент: сдача недель, запись на прием, Excel-хранилище, логирование, роли."
authors = ["You <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
aiogram = "3.10.0"
python-dotenv = "1.0.1"
pandas = "2.2.2"
openpyxl = "3.1.5"
filelock = "3.15.4"
uvloop = {version = "0.19.0", markers = "platform_system != 'Windows'"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
